frontend/src/StreamlitApp.css
/**
 * @license
 * Copyright 2018 Streamlit Inc. All rights reserved.
 */

/**
 * Palette:
 * - Black: #101620
 * - Gray: #768096
 * - Light gray: #E6E9EF
 * - Ultralight gray: #F0F3F9
 * - Accent red: #F63366
 * - Accent yellow: #FFFD80
 * - Accent blue: #2979E9
 * - Accent deep blue: #193999
 * - Accent green: #199939
 *
 * Text sizes:
 * - Normal: 1rem
 * - Small: 0.8rem;
 */
body {
  font-family: 'IBM Plex Sans', sans-serif;
  color: #101620;
  font-size: 17px;
  line-height: 1.6;
}

.main {
  display: flex;
  flex-direction: column;
}

a,
a:visited {
  color: #F63366;
}

a:hover,
a:active {
  color: #F63366;
  text-decoration: underline;
}

h1, .h1 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 700;
  font-size: 2.5rem;
  margin: 2.5rem 0 0 0;
}

h1:first-child, .h1:first-child {
  margin-top: 0;
}

h2, .h2 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  font-size: 2.0rem;
  margin: 3rem 0 0 0;
}

h3, .h3 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  margin: 0.25rem 0 0 0;
}

h5, .h5 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  margin: 0.25rem 0 0 0;
}

h6, .h6 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 300;
  font-size: 1rem;
  text-transform: uppercase;
  margin: 0;
}

header {
  border-top: 2px solid #FFFD80;
  border-image: linear-gradient(90deg, #F63366, #FFFD80) 1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 3.5rem;
  padding: 0 1rem;
  z-index: 100;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.wide header {
  background-image: linear-gradient(180deg, #ffffff 25%, rgba(255, 255, 255, 0.5) 75%, transparent);
}

#brand {
  font-weight: 700;
  line-height: 1.5;
  flex: 1 0;
}

#brand a {
  color: #101620;
}

#brand a:hover {
  color: #F63366;
}

.btn,
button {
  display: flex;
}

button:focus {
  outline: 5px auto #F63366;
}

.btn {
  border-radius: 0.75rem;
}

.btn-primary {
  background-color: transparent;
  border-color: #E6E9EF;
  color: #101620;
}

.btn:hover {
  background-color: transparent;
  color: #F63366;
  border-color: #F63366;
}

/* This is how bootstrap sets colors on secondary buttons.
 * Need to find a better way to override colors. Install SASS? */
.btn-secondary:not([disabled]):not(.disabled):active,
.btn-secondary:not([disabled]):not(.disabled).active {
  background-color: #F63366;
  color: #FFFFFF;
  border-color: #F63366;
}

.btn-secondary {
  background-color: transparent;
  color: #101620;
  border-color: transparent;
}

.dropdown-menu button:active {
  background-color: #F63366;
}

.streamlit-container {
  margin-top: 80px;
}

.wide .streamlit-container {
  width: unset;
  max-width: unset;
}

.streamlit-container .element-container {
  display: inline-block;
  margin-bottom: 1rem;
}

.streamlit-container .footer {
  height: 25px;
}

.progress {
  background-color: #E6E9EF;
}

.progress-bar {
  background-color: #2979E9;
}

.icon {
  width: 0.9rem;
  height: 0.9rem;
}

@media (max-width: 768px) {
  header,
  .wide header {
    position: absolute;
    background: unset;
  }
}

